[gd_scene load_steps=2 format=2]

[ext_resource path="res://CombatOverlay/UnitInfo.gd" type="Script" id=1]

[node name="UnitInfo" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -800.0
margin_bottom = -640.0
rect_min_size = Vector2( 480, 80 )
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color( 0, 4.07059, 27.1608, 0.439216 )
margin_right = 482.0
margin_bottom = 82.0
rect_min_size = Vector2( 480, 80 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 475.0
margin_bottom = 75.0

[node name="Information" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_right = 468.0
margin_bottom = 68.0
rect_min_size = Vector2( 436, 65 )

[node name="Details" type="HBoxContainer" parent="PanelContainer/MarginContainer/Information"]
margin_right = 100.0
margin_bottom = 68.0
rect_min_size = Vector2( 100, 50 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Information/Details"]
margin_right = 100.0
margin_bottom = 68.0
rect_min_size = Vector2( 100, 0 )

[node name="Name" type="Label" parent="PanelContainer/MarginContainer/Information/Details/VBoxContainer"]
margin_right = 100.0
margin_bottom = 14.0
text = "LongLong----"

[node name="Class" type="Label" parent="PanelContainer/MarginContainer/Information/Details/VBoxContainer"]
margin_top = 18.0
margin_right = 100.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( -142, -18 )
text = "Blademaster"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Information/Details/VBoxContainer"]
margin_top = 36.0
margin_right = 100.0
margin_bottom = 50.0

[node name="LevelLabel" type="Label" parent="PanelContainer/MarginContainer/Information/Details/VBoxContainer/HBoxContainer"]
margin_right = 18.0
margin_bottom = 14.0
text = "Lvl"

[node name="Level" type="Label" parent="PanelContainer/MarginContainer/Information/Details/VBoxContainer/HBoxContainer"]
margin_left = 22.0
margin_right = 38.0
margin_bottom = 14.0
text = "20"

[node name="Turn" type="Label" parent="PanelContainer/MarginContainer/Information/Details/VBoxContainer"]
margin_top = 54.0
margin_right = 100.0
margin_bottom = 68.0
text = "Player"

[node name="Health" type="HBoxContainer" parent="PanelContainer/MarginContainer/Information"]
margin_left = 104.0
margin_right = 184.0
margin_bottom = 68.0
rect_min_size = Vector2( 80, 0 )

[node name="Health Points" type="Label" parent="PanelContainer/MarginContainer/Information/Health"]
margin_top = 27.0
margin_right = 18.0
margin_bottom = 41.0
text = "HP"

[node name="HP" type="Label" parent="PanelContainer/MarginContainer/Information/Health"]
margin_left = 22.0
margin_top = 27.0
margin_right = 59.0
margin_bottom = 41.0
text = "20/20"

[node name="Stats" type="HBoxContainer" parent="PanelContainer/MarginContainer/Information"]
margin_left = 188.0
margin_right = 468.0
margin_bottom = 68.0
rect_min_size = Vector2( 280, 0 )

[node name="Offensive" type="VBoxContainer" parent="PanelContainer/MarginContainer/Information/Stats"]
margin_right = 80.0
margin_bottom = 68.0
rect_min_size = Vector2( 80, 32 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Information/Stats/Offensive"]
margin_right = 80.0
margin_bottom = 14.0

[node name="AttackLabel" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Offensive/HBoxContainer"]
margin_right = 26.0
margin_bottom = 14.0
rect_min_size = Vector2( 26, 0 )
text = "Atk"

[node name="AttackPoints" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Offensive/HBoxContainer"]
margin_left = 30.0
margin_right = 38.0
margin_bottom = 14.0
text = "5"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/Information/Stats/Offensive"]
margin_top = 18.0
margin_right = 80.0
margin_bottom = 32.0

[node name="MagicLabel" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Offensive/HBoxContainer2"]
margin_right = 26.0
margin_bottom = 14.0
text = "Mag"

[node name="MagicPoints" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Offensive/HBoxContainer2"]
margin_left = 30.0
margin_right = 38.0
margin_bottom = 14.0
text = "2"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/Information/Stats/Offensive"]
margin_top = 36.0
margin_right = 80.0
margin_bottom = 50.0

[node name="HitLabel" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Offensive/HBoxContainer3"]
margin_right = 19.0
margin_bottom = 14.0
text = "Hit"

[node name="HitRate" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Offensive/HBoxContainer3"]
margin_left = 23.0
margin_right = 39.0
margin_bottom = 14.0
text = "90"

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/Information/Stats/Offensive"]
margin_top = 54.0
margin_right = 80.0
margin_bottom = 68.0

[node name="CriticalLabel" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Offensive/HBoxContainer4"]
margin_right = 18.0
margin_bottom = 14.0
text = "Crt"

[node name="CriticalChance" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Offensive/HBoxContainer4"]
margin_left = 22.0
margin_right = 38.0
margin_bottom = 14.0
text = "30"

[node name="Protection" type="VBoxContainer" parent="PanelContainer/MarginContainer/Information/Stats"]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 68.0
rect_min_size = Vector2( 80, 32 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Information/Stats/Protection"]
margin_right = 80.0
margin_bottom = 14.0

[node name="DefenseLabel" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Protection/HBoxContainer"]
margin_right = 23.0
margin_bottom = 14.0
rect_min_size = Vector2( 23, 0 )
text = "Def"

[node name="DefensePoints" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Protection/HBoxContainer"]
margin_left = 27.0
margin_right = 35.0
margin_bottom = 14.0
text = "3"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/Information/Stats/Protection"]
margin_top = 18.0
margin_right = 80.0
margin_bottom = 32.0

[node name="ResistanceLabel" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Protection/HBoxContainer2"]
margin_right = 23.0
margin_bottom = 14.0
text = "Res"

[node name="ResistancePoints" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Protection/HBoxContainer2"]
margin_left = 27.0
margin_right = 35.0
margin_bottom = 14.0
text = "8"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/Information/Stats/Protection"]
margin_top = 36.0
margin_right = 80.0
margin_bottom = 50.0

[node name="EvasionLabel" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Protection/HBoxContainer3"]
margin_right = 21.0
margin_bottom = 14.0
text = "Eva"

[node name="EvasionRate" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Protection/HBoxContainer3"]
margin_left = 25.0
margin_right = 33.0
margin_bottom = 14.0
text = "8"

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/Information/Stats/Protection"]
margin_top = 54.0
margin_right = 80.0
margin_bottom = 68.0

[node name="CriticalEvasionLabel" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Protection/HBoxContainer4"]
margin_right = 25.0
margin_bottom = 14.0
text = "Dex"

[node name="CriticalEvasion" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Protection/HBoxContainer4"]
margin_left = 29.0
margin_right = 37.0
margin_bottom = 14.0
text = "8"

[node name="Misc" type="VBoxContainer" parent="PanelContainer/MarginContainer/Information/Stats"]
margin_left = 168.0
margin_right = 248.0
margin_bottom = 68.0
rect_min_size = Vector2( 80, 32 )

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/Information/Stats/Misc"]
margin_right = 80.0
margin_bottom = 14.0

[node name="SpeedLabel" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Misc/HBoxContainer3"]
margin_right = 23.0
margin_bottom = 14.0
text = "Spd"

[node name="Speed" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Misc/HBoxContainer3"]
margin_left = 27.0
margin_right = 35.0
margin_bottom = 14.0
text = "4"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Information/Stats/Misc"]
margin_top = 18.0
margin_right = 80.0
margin_bottom = 32.0

[node name="MovementLabel" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Misc/HBoxContainer"]
margin_right = 27.0
margin_bottom = 14.0
text = "Mov"

[node name="MoveRange" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Misc/HBoxContainer"]
margin_left = 31.0
margin_right = 39.0
margin_bottom = 14.0
text = "4"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/Information/Stats/Misc"]
margin_top = 36.0
margin_right = 80.0
margin_bottom = 50.0

[node name="RangeLabel" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Misc/HBoxContainer2"]
margin_right = 28.0
margin_bottom = 14.0
rect_min_size = Vector2( 28, 0 )
text = "Rng"

[node name="AttackRange" type="Label" parent="PanelContainer/MarginContainer/Information/Stats/Misc/HBoxContainer2"]
margin_left = 32.0
margin_right = 40.0
margin_bottom = 14.0
text = "1"
